create index.html file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1?>walter</h1>
-</body>
+!DOCTYPE html>
+<html>
+	<head>
+		<title>🤩 Shining Toes ⭐</title>
+		<meta name="description" content="Once A Toe, Alway A Toe?">
+		
+	</head>
+	<body>
+		<h1>Shining Toes</h1>
+		<img src="not fire.png" width="500" height="150" alt="The image failed to load or is taking to long to load side lengths? ">
+		<section>
+			<h3><i>Shining toes</i> are "toes that shine in the dark when no one else is there",
+			 never fear, for shining toes might be there to save the day!</h3>
+			<p>When <i>Billy bob</i> toe was walking down the street, his big bro came up to him and said are you skibidi?
+			Billy bob pause for a second and said, <b><em>"Nah, I'm Sigma"</b></em> hi.</p>
+			<p>The moral of this story is never mess with <em>Billy bob</em> in his <strong>prime</strong>?</p>
+			<p>Fact! Html means <strong>H-yper, T-ext, M-arkup, L-anguage</strong>.</p>
+		</section>
+		<a href="Shining Toes Story.html">Href means, "Hyper Text Reference"?</a>
+		<section>
+			<h3>Fan Art?</h3>
+			<img src="hacking.gif" width="250" height="250">
+			<img src="giga noob.jfif" width="250" height="250">
+		</section>
+		<h3>Nubaway Surfers?</h3>
+		<p><audio src="subway theme.mp3" controls type="audio/mp3" width = 250 height = 250></audio></p>
+		<h3>Kid Beating up Santa</h3>
+		<p><video src="Kid attacks fake santa.mp4" controls type="video/mp4" width = 500 height = 250></video></p>
+	</body>
 </html>
+<!-- <h1-6> Determines text size.
+
+<!DOCTYPE html> Determines what kind of code you are using?
+
+<i> and <b> Determine weather the text should be bold or slanted?
+
+<em> and <strong> Can determine how the "text to speach" reads it.
+
+<p> Determines weather it should be a paragraph or not, (spaces in between).
+
+<section> Can separate it.
+
+<ul> Is with bulet points?
+
+<ol> With numbers?
+
+<li> Can separate sentences by lines, (Can go with <ul>, <ol>).
+
+<a> Can send someone to another page, (might need an attribute like, href).
+
+<img> Can make image, (might also need an src attribute)?
+
+<audio> Can make audio with attributes? Type attribute is not neccessary?
+
+<video> Can make video with attributes? Type attribute is not neccessary?
+
+<table> Rows and colums to define things like in school papers?
+
+<tr> Table row, can hold the <th> and <td>?
+
+<th> Table header, can hold the main text of the table
+
+<td> Table data, where you can put table data
+
+<form> Random cool stuff?
+
+<button> Can create a button?
+
+<input> Like a text input box in roblox studio?
+
+<label> A name for something?
+
+<body> Almost everything visualy shown on the page?
+
+<head> The stuff contained not visualy shown on the page? Like the tab name?
+
+<title> Tab name?
+-->
