--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta name="description" content="Once A Toe, Alway A Toe?">
 		
 	</head>
-	<body>
+	<body></body>
 		<h1>Shining Toes</h1>
 		<img src="not fire.png" width="500" height="150" alt="The image failed to load or is taking to long to load side lengths? ">
 		<section>
